// ============================================================
// SafeIn5 MVP - Tenancy & Organisation Hierarchy
// Generated from the live PostgreSQL 16 schema (db/migrations/0001-0008).
// Import at https://dbdiagram.io  ->  paste, or File > Import > DBML
// ============================================================
Project SafeIn5_01_tenancy {
  database_type: 'PostgreSQL'
  Note: 'SafeIn5 MVP - Tenancy & Organisation Hierarchy'
}

TableGroup "Tenancy & Organisation Hierarchy" {
  tenant
  site
  sub_site
  asset
  role
}

Table asset {
  id uuid [pk, default: `gen_random_uuid()`]
  tenant_id uuid [not null]
  site_id uuid [not null, note: 'Required. Every asset belongs to a site even when it is not pinned to a sub-site, so site-scoped feeds and RLS-adjacent scoping never need a NULL branch.']
  sub_site_id uuid [note: 'Optional. An asset may hang directly off a site (mobile plant that moves between zones) or off a specific sub-site. Must belong to the same tenant; agreement between asset.site_id and sub_site.site_id is enforced by trg_asset_sub_site_site_match.']
  external_ref text [note: '''The client's own asset/tag ID (e.g. "SB-14"). Free text because every quarry numbers its plant differently; unique per tenant when present so grouped insight queries do not split.''']
  name text [not null]
  asset_type text [not null, default: 'other', note: 'fixed_plant | mobile_plant | fixture | access_structure | other. Structured so "custom lifting fixtures" is a filter, not a text search.']
  status text [not null, default: 'active', note: 'one of: active | inactive | decommissioned']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (id, tenant_id) [unique, name: 'uq_asset_id_tenant']
  }

  Note: 'A physical asset: fixed or mobile plant, a lifting fixture, an access structure. Deliberately a real table, not a free-text field: the flagship supervisor insight -- "3 similar Be Aware signals in 2 weeks, all on custom lifting fixtures" -- is a GROUP BY asset_id over behaviour_signal, and string matching would make that demo unreliable. Admin UX keeps assets optional.'
}

Table role {
  id uuid [pk, default: `gen_random_uuid()`]
  code text [not null, unique, note: 'one of: worker | supervisor | org_admin | platform_admin | moderator. Stable machine identifier used in JWT claims (rol) and in guards. CHECK-constrained rather than a PG ENUM so a Phase-2 role is an ALTER ... CHECK plus one INSERT.']
  name text [not null]
  description text
  permissions jsonb [not null, default: '[]', note: 'Flat JSON array of permission strings, e.g. ["signal.create","feed.read"]. No RBAC engine at MVP: the Permissions guard performs a set-membership test against this array.']
  sort_order integer [not null, default: 0]
  is_active bool [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz

  Note: 'Global reference table of the five MVP roles. Not tenant-scoped: the same role definitions apply in every tenant, and a user holds a role per membership (user_tenant_membership.role_id, migration 0002). Seeded here with fixed UUIDs so later migrations and fixtures can reference them deterministically.'
}

Table site {
  id uuid [pk, default: `gen_random_uuid()`]
  tenant_id uuid [not null]
  name text [not null]
  city text
  country_code character(2)
  timezone text [not null, default: 'Europe/London', note: '[SIGNAL] IANA timezone name. Shift and time-of-day pattern analysis requires local time, and this is uncorrectable retrospectively once signals have been captured against a wrong or absent zone.']
  centroid_lat numeric(9,6) [note: '[SIGNAL] Site centroid latitude, numeric(9,6) (~0.1 m precision). Feeds geo clustering and proximity context resolution (ADM-006).']
  centroid_lon numeric(9,6) [note: '[SIGNAL] Site centroid longitude. See centroid_lat.']
  status text [not null, default: 'active', note: 'one of: active | inactive']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz [note: 'Soft delete. Sub-sites, assets, QR contexts and signals reference this row.']

  indexes {
    (id, tenant_id) [unique, name: 'uq_site_id_tenant']
  }

  Note: 'A physical site (e.g. a quarry) belonging to a tenant (= one client organisation). Top of the context hierarchy used by QR resolution, feed scoping and user_site_assignment.'
}

Table sub_site {
  id uuid [pk, default: `gen_random_uuid()`]
  tenant_id uuid [not null]
  site_id uuid [not null]
  parent_sub_site_id uuid [note: 'Optional parent sub-site, same site and same tenant. Nullable self-FK: SafeIn5 explicitly warned against complex hierarchy (WRK-013 amendment), so MVP caps depth at 1 -- but the column costs nothing now and avoids a migration if Phase 2 needs depth.']
  name text [not null]
  kind text [not null, default: 'area', note: 'area | zone | task_zone | asset_group. Structured rather than free text because these are grouping keys the future SIGNAL layer depends on (Open-Questions: hierarchy model).']
  centroid_lat numeric(9,6) [note: '[SIGNAL] Zone centroid latitude; geo-based context resolution and clustering.']
  centroid_lon numeric(9,6) [note: '[SIGNAL] Zone centroid longitude.']
  status text [not null, default: 'active', note: 'one of: active | inactive']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (id, tenant_id) [unique, name: 'uq_sub_site_id_tenant']
  }

  Note: 'A named area/zone within a site -- the level at which QR codes, feeds and Learn5 bindings are usually scoped. Self-nesting is permitted structurally but capped at one level of nesting in MVP by trg_sub_site_depth_cap.'
}

Table tenant {
  id uuid [pk, default: `gen_random_uuid()`]
  slug citext [not null, unique, note: '''URL/login-hint identifier, e.g. 'community', 'brackley-aggregates'. citext so uniqueness is case-insensitive.''']
  kind text [not null, note: 'community | corporate. Drives visibility defaults, moderation model and guest rules.']
  name text [not null]
  industry_code text [note: '[SIGNAL] Written at MVP, unread by any MVP feature. Sector code (e.g. SIC/NAICS-style) that lets the Phase-2 intelligence layer benchmark behaviour patterns across comparable industries. Unrecoverable retrospectively at scale, free to capture now.']
  country_code character(2) [note: 'ISO 3166-1 alpha-2, uppercase.']
  is_public_readable bool [not null, default: false, note: 'true only for the Community tenant -- the single tenant whose final, visible signals are readable unauthenticated (Architecture Sec 3.3 community_public_read policy).']
  allow_guest_submission bool [not null, default: false, note: 'Per-tenant switch resolving the open question in WRK-003. Community pilot ships false (PRD Sec 5.6 "guest reads, account writes") but is flippable without a deploy or a migration.']
  data_region text [not null, default: 'eu-west-1', note: '''Storage/compute region for this tenant's data. EU residency NFR; default eu-west-1.''']
  theme jsonb [not null, default: '{}', note: 'MVP theming scope is logo + colour only: {"logo_url": "...", "colour_tokens": {...}}.']
  retention_policy jsonb [not null, default: '{"audit_days": 2555, "media_days": 365, "signals_days": 730}', note: '{signals_days, media_days, audit_days}. Read by the nightly retention job (GDPR NFR); per-tenant because corporate contracts and the Community tenant will not agree on retention.']
  status text [not null, default: 'active', note: 'one of: active | suspended']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz [note: 'Soft delete. Never hard delete a tenant -- its signals are referenced by audit_log and outbox_event, which are append-only.']

  Note: '''The RLS anchor. Every tenant-scoped table references tenant(id) and every RLS policy keys on current_setting('app.tenant_id'). One tenant IS one client organisation: the customer-facing organisation profile (name, industry_code, country_code) lives on this row, which is why the org_admin role administers a tenant. Deliberately NOT tenant-scoped and NOT RLS-protected: it is the root of the tenancy graph, and platform-admin paths read it via runAsSystem.'''
}

// ---------- Relationships ----------
Ref fk_asset_site: asset.(site_id, tenant_id) > site.(id, tenant_id)
Ref fk_asset_sub_site: asset.(sub_site_id, tenant_id) > sub_site.(id, tenant_id)
Ref fk_asset_tenant: asset.tenant_id > tenant.id
Ref fk_site_tenant: site.tenant_id > tenant.id
Ref fk_sub_site_parent: sub_site.(parent_sub_site_id, tenant_id) > sub_site.(id, tenant_id)
Ref fk_sub_site_site: sub_site.(site_id, tenant_id) > site.(id, tenant_id)
Ref fk_sub_site_tenant: sub_site.tenant_id > tenant.id
